--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.24.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.15.1",
