--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "csurf": "^1.10.0",
+    "express-rate-limit": "^5.0.0",
+    "helmet": "^3.21.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "passport": "^0.4.1",
