--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.11.0",
     "csurf": "^1.10.0",
     "express-rate-limit": "^5.0.0",
+    "fs": "^0.0.1-security",
     "helmet": "^3.21.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
@@ -52,6 +53,7 @@
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
+    "@types/axios": "^0.14.0",
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
