--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@sendgrid/mail": "^6.4.0",
     "bcrypt": "^3.0.7",
     "bcryptjs": "^2.4.3",
+    "btoa-atob": "^0.1.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "csurf": "^1.10.0",
@@ -43,6 +44,7 @@
     "helmet": "^3.21.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.15.1",
