:rocket: Adiciona o autor do projeto no package.json
Valdery Alves Paes Júnior <valdery.jur@gmail.com> (http://valderyalves.com)

Signed-off-by: Valdery Alves Paes Junior <valdery.jur@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zero-veneno-api",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Valdery Alves Paes Júnior <valdery.jur@gmail.com> (http://valderyalves.com)",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
