:construction: Ajeita o local e as rotas de alguns serviços
- Deixando idêntico à documentação no postman

Signed-off-by: valdery-mangue3 <valderyalves@mangue3.com>

--- a/src/app-credentials.json
+++ b/src/app-credentials.json
@@ -1,12 +1,12 @@
 [
     {
-        "CLIENT_ID": "ecommerce",
-        "CLIENT_SECRET": "dasdasdasd",
+        "CLIENT_ID": "2de4354et54c",
+        "CLIENT_SECRET": "4c45ve5r",
         "type": "ecommerce"
     },
     {
-        "CLIENT_ID": "admin",
-        "CLIENT_SECRET": "dasdasdasd",
+        "CLIENT_ID": "08uy3985v7hsd87fmh9348",
+        "CLIENT_SECRET": "90cj40jxhm94",
         "type": "admin"
     }
 ]
