--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/schedule": "^0.2.0",
     "@nestjs/typeorm": "^6.2.0",
     "@sendgrid/mail": "^6.4.0",
+    "aws-sdk": "^2.649.0",
     "bcrypt": "^3.0.7",
     "bcryptjs": "^2.4.3",
     "btoa-atob": "^0.1.2",
