--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zero-veneno-api",
+  "name": "Teste-simple-crud",
   "version": "0.0.1",
   "description": "",
   "author": "Valdery Alves Paes Júnior <valdery.jur@gmail.com> (http://valderyalves.com)",
